syntax = "proto3";

option java_package = "ie.app.minimap.data.proto";
option java_multiple_files = true;

// Building
message BuildingProto {
  int64 id = 1;
  int64 venue_id = 2;
  string name = 3;
  string description = 4;
  int64 created_at = 5;
}